base/ssac-back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssac-back
  labels:
    app: ssac-back
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 3
      maxSurge: 1
  minReadySeconds: 20
  replicas: 2
  selector:
    matchLabels:
      app: ssac-back
      tier: back
  template:
    metadata:
      labels:
        app: ssac-back
        tier: back
    spec:
      containers:
        - name: ssac-back
          image: 107647632326.dkr.ecr.us-east-2.amazonaws.com/ssac-back:21
          resources:
            limits:
              cpu: "100m"
              memory: 512Mi
            requests:
              cpu: "30m"
              memory: 256Mi
          ports:
            - containerPort: 5000
      #     volumeMounts:
      #       - name: persistent-storage
      #         mountPath: /src
      # volumes:
      #   - name: persistent-storage
      #     persistentVolumeClaim:
      #       claimName: efs-claim
