base/ssac-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssac-front
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 3
      maxSurge: 1
  minReadySeconds: 20
  replicas: 2
  selector:
    matchLabels:
      app: ssac-front
      tier: front
  template:
    metadata:
      labels:
        app: ssac-front
        tier: front
    spec:
      containers:
        - name: ssac-front
          image: 107647632326.dkr.ecr.us-east-2.amazonaws.com/ssac-front:30
          # image: 583483472705.dkr.ecr.ap-northeast-2.amazonaws.com/ssac-front:2
          resources:
            limits:
              cpu: "30m"
              memory: 1024Mi
            requests:
              cpu: "10m"
              memory: 512Mi
          ports:
            - containerPort: 80
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 95
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: tier
                      operator: In
                      values:
                        - back
                topologyKey: "kubernetes.io/hostname"
