base/test-front-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssac-front
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 20
  replicas: 2
  selector:
    matchLabels:
      app: ssac-front
      tier: front
  template:
    metadata:
      labels:
        app: ssac-front
        tier: front
    spec:
      containers:
        - name: ssac-front
          image: 107647632326.dkr.ecr.us-east-2.amazonaws.com/ssac-front:1
          resources:
            limits:
              cpu: "400m"
            requests:
              cpu: "200m"
          ports:
            - containerPort: 3000
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 80
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: tier
                      operator: In
                      values:
                        - back
                topologyKey: "kubernetes.io/hostname"
