base/ssac-back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssac-back
  labels:
    app: ssac-back
    tier: back
spec:
  type: NodePort # 서비스 타입
  ports:
    - port: 80 # 서비스 포트
      targetPort: 5000 # 타켓, 즉 pod의 포트
  selector:
    app: ssac-back
