base/ssac-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssac-front
  labels:
    app: ssac-front
    tier: front
spec:
  type: NodePort # 서비스 타입
  ports:
    - port: 443 # 서비스 포트
      targetPort: 80 # 타켓, 즉 pod의 포트
      protocol: TCP
  selector:
    app: ssac-front
