base/ssac-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingttti
  annotations:
    #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: instance
    #alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: log-land.com
    external-dns.alpha.kubernetes.io/ttl: "100"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:107647632326:certificate/d4e2d1ce-7bc7-4557-b7c8-bbd114bf4d37
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  tls:
    - hosts:
        - log-land.com
  ingressClassName: alb
  defaultBackend:
    service:
      name: ssac-front
      port:
        number: 3000
  rules:
    - host: log-land.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssac-front
                port:
                  number: 3000
          # - path: /auth
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: ssac-front
          #       port:
          #         number: 3000
